# PortoFino-Portfolio-Simulator

./: .dockerignore  .env  README.md  docker-compose.yml  fly.toml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/src/api/: main.py
backend/src/api/dependencies/: users.py
backend/src/api/routers/: auth.py  history.py  oauth.py  report.py  simulate.py  token.py  ws_reports.py  ws_simulations.py
backend/src/core/: config.py
backend/src/core/auth/: auth_service.py  oauth.py  oauth_service.py  token_service.py  utils.py
backend/src/core/history/: history_service.py
backend/src/core/report/: report_service.py  xls_generator.py
backend/src/core/simulation/: command_parser.py  data_preparator.py  portfolio_simulator.py  simulation_service.py  yfinance_fetcher.py
backend/src/db/: database.py
backend/src/db/migrations/: alembic.ini  env.py  script.py.mako
backend/src/db/migrations/versions/: 20251107_init_schema.py
backend/src/db/models/: __init__.py  assets_model.py  refresh_token_model.py  simulation_model.py  user_model.py
backend/src/db/repositories/: assets_repo.py  history_repo.py
backend/src/schemas/: auth.py  history.py  report.py  simulation.py
backend/src/services/kafka/: consumer.py  init_topics.py  producer.py
backend/src/services/redis/: client.py  pubsub.py
backend/src/services/worker/: celery_app.py
backend/src/services/worker/sync_clients/: database.py  kafka_producer.py  redis_client.py  redis_pubsub.py
backend/src/services/worker/tasks/: report.py  scheduler.py  simulation.py
backend/src/tests/: conftest.py
backend/src/tests/e2e/: test_history_report_pipeline.py  test_simulation_pipeline.py
backend/src/tests/integration/: test_services.py
(+81 files in other folders)
